--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.4",
+    "tdesign-vue-next": "^1.10.2",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -29,6 +30,8 @@
     "npm-run-all2": "^6.2.3",
     "prettier": "^3.3.3",
     "typescript": "~5.5.4",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.8",
     "vue-tsc": "^2.1.6"
   }
