--- a/service/package.json
+++ b/service/package.json
@@ -47,6 +47,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "log4js": "^6.9.1"
+        "log4js": "^6.9.1",
+        "yaml": "^2.6.0"
     }
 }
