--- a/service/package.json
+++ b/service/package.json
@@ -48,6 +48,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "log4js": "^6.9.1",
+        "socket.io": "^4.8.1",
         "yaml": "^2.6.0"
     }
 }
