--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.4",
+    "socket.io-client": "^4.8.1",
     "tdesign-vue-next": "^1.10.2",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
