--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tntx/file-icon": "^1.0.1",
     "pinia": "^2.2.4",
     "socket.io-client": "^4.8.1",
     "tdesign-vue-next": "^1.10.2",
