--- a/service/package.json
+++ b/service/package.json
@@ -50,6 +50,7 @@
         "express": "^4.18.2",
         "log4js": "^6.9.1",
         "socket.io": "^4.8.1",
+        "uuid": "^11.0.3",
         "yaml": "^2.6.0"
     }
 }
