--- a/service/package.json
+++ b/service/package.json
@@ -48,6 +48,7 @@
         "cors": "^2.8.5",
         "dayjs": "^1.11.13",
         "express": "^4.18.2",
+        "lodash": "^4.17.21",
         "log4js": "^6.9.1",
         "socket.io": "^4.8.1",
         "uuid": "^11.0.3",
