--- a/service/package.json
+++ b/service/package.json
@@ -45,6 +45,7 @@
         "*.{vue,js,ts,jsx,tsx,md,json}": "prettier --write"
     },
     "dependencies": {
+        "@inquirer/prompts": "^7.1.0",
         "cors": "^2.8.5",
         "dayjs": "^1.11.13",
         "express": "^4.18.2",
